Fixed the issue with the scroll height of the attrbiutes table being too large after the header height increase.

--- a/conf-core/src/main/webapp/resources/css/layout.css
+++ b/conf-core/src/main/webapp/resources/css/layout.css
@@ -137,7 +137,7 @@ body {
 .hierarchies-attributes-cell .ui-datatable-scrollable-body {
 	margin-right: 0 !important;
 	overflow-y: scroll;
-	max-height: 300px;
+	max-height: 276px;
 	overflow-x: hidden;
 }
 
